# c464_finalproject

./: CMakeLists.txt  README.md  strong_scaling_test.sh  weak_scaling_test.sh
src/: CMakeLists.txt  globals.cpp  globals.h  graph.cpp  graph.h  kernels.cpp  kernels.h  main.cpp  plf_nanotimer.h  test.cpp  timestamps.cpp  timestamps.h
